--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>(:</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>tela do console</title>
 </head>
 <body>
-<h1>(:</h1>
-<script>
-console.log("essa e uma tela console");
-var primeiro_nome="William";
-var ultimo_nome="Hurt";
-var nome_completo=primeiro_nome.concat(ultimo_nome);
-console.log(nome_completo);
-var substituto=nome_completo.replace("Hurt", "Bonner");
-console.log(substituto);
-var maiuscula=primeiro_nome.toUpperCase();
-var minuscula=ultimo_nome.toLowerCase();
-console.log(maiuscula+" "+minuscula);
-</script>
+    <h1>(:</h1>
+    <h2>abra o console</h2>
+    <p>O Visual Studio Code é um editor de código-fonte desenvolvido pela Microsoft para Windows, Linux e macOS. Ele inclui suporte para depuração, controle de versionamento Git incorporado, realce de sintaxe, complementação inteligente de código, snippets e refatoração de código</p>
+    <p>Ela é uma interface textual que interpreta os comandos existentes em um sistema operativo e os envia ao núcleo imprimindo posteriormente o resultado do processamento na tela.Para abrir a tela do console podemos inspecionar a pagina ou apertar o botão f12 do teclado, e para imprimir na tela utilizamos o console.log().</p>
+    <script src="main.js">
+        
+    </script>
 </body>
 </html>
